@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+11 November 2014 V. Ivanchenko (hadr-man-V10-00-14)
+---------------------------------------------------
+- G4HadronicProcess - clear final state before resample interaction
+  due to energy balance violation 
+
 7 November 2014 V. Ivanchenko (hadr-man-V10-00-13)
 ------------------------------------------------
 4 November 2014 V. Ivanchenko (hadr-man-V10-00-12)
